@@ -11,6 +11,8 @@
 - fixed issue with inline format_exceptions that was producing
   blank exception pages when an inheriting template is 
   present [ticket:71]
+- format_exceptions will apply the encoding options
+  of html_error_template() to the buffered output
   
 0.1.10
 - fixed propagation of 'caller' such that nested %def calls
